--- a/starwars/src/App.scss
+++ b/starwars/src/App.scss
@@ -1,5 +1,17 @@
 .App {
+
   text-align: center;
+}
+
+.background {
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-image: url("./sw-bg.jpg");
 }
 .Header {
   color: #443e3e;
