--- a/starwars/src/components/Films.scss
+++ b/starwars/src/components/Films.scss
@@ -1,12 +1,16 @@
 .films {
-  max-width: 25%;
+  width: 25%;
 
   h2 {
-    align-self: center;
     font-size: 2rem;
   }
 
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: flex-start;
+
+  .film {
+    margin-top: 0;
+  }
 }
