--- a/starwars/src/components/StarWars.scss
+++ b/starwars/src/components/StarWars.scss
@@ -4,6 +4,8 @@ html {
 .character {
   display: flex;
   max-width: 90%;
+  background-image: linear-gradient(to bottom right, #ffffff30, white);
+  margin: 2rem auto;
 
   .char-info {
     h1 {
@@ -24,6 +26,8 @@ html {
   .column-25{
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 25%;
   }
 }
